--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="top_up">开始</string>
     <string name="log">日志</string>
     <string name="clear"><u>清除</u></string>
+    <string name="switch_proxy_pool">切换代理</string>
 </resources>
